# Cars-reviews-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  Reviews API.postman_collection.json  docker-compose.yaml  gunicorn.py  pyproject.toml  test.sh
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/services/: user_dao.py
core/social_auth/: serializers.py  services.py  utils.py  views.py
fixtures/: users.json
main/: asgi.py  settings.py  urls.py  wsgi.py
reviews/: admin.py  models.py  urls.py  validators.py
reviews/migrations/: 0001_initial.py  0002_alter_comment_options_and_more.py
reviews/serializers/: __init__.py  car_serializers.py  comment_serializer.py  country_serializers.py  manufacturer_serializers.py
reviews/views/: __init__.py  car_views.py  comment_views.py  country_views.py  export_views.py  manufacturer_views.py
tests/: conftest.py  factories.py
tests/car/: test_car_create.py  test_car_update_delete.py  test_list_cars.py  test_retrieve_car.py
tests/comment/: test_create_comment.py  test_list_comments.py  test_retrieve_comment.py  test_update_delete_comment.py
tests/country/: test_create_country.py  test_list_country.py  test_retrieve_country.py  test_update_delete_country.py
tests/manufacturer/: test_create_manufacturer.py  test_list_manufacturer.py  test_retrieve_manufacturer.py  test_update_delete_manufacturer.py
tests/validators/: test_password_generator.py
